--- a/src/ShopBundle/Resources/translations/admin.de.xliff
+++ b/src/ShopBundle/Resources/translations/admin.de.xliff
@@ -294,6 +294,18 @@
                 <source>chameleon_system_shop.product_search_index.completed</source>
                 <target>Abgeschlossen</target>
             </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.last_orders_title">
+                <source>chameleon_system_shop.widget.last_orders_title</source>
+                <target>Neueste Bestellungen</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.last_orders_not_found">
+                <source>chameleon_system_shop.widget.last_orders_not_found</source>
+                <target>Keine Bestellungen gefunden</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.last_orders_discounts">
+                <source>chameleon_system_shop.widget.last_orders_discounts</source>
+                <target>Rabatte</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
