--- a/src/EcommerceStatsBundle/Resources/translations/admin.en.xliff
+++ b/src/EcommerceStatsBundle/Resources/translations/admin.en.xliff
@@ -135,6 +135,10 @@
                 <source>chameleon_system_ecommerce_stats.widgets.reload_button_label</source>
                 <target>Reload</target>
             </trans-unit>
+            <trans-unit id="chameleon_system_ecommerce_stats.access_denied">
+                <source>chameleon_system_ecommerce_stats.access_denied</source>
+                <target>You do not have a user role with the appropriate access authorisations</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
