--- a/src/ShopBundle/Resources/translations/admin.de.xliff
+++ b/src/ShopBundle/Resources/translations/admin.de.xliff
@@ -334,6 +334,36 @@
                 <source>chameleon_system_shop.widget.shop_product_status_widget.products_quantity</source>
                 <target>Anzahl</target>
             </trans-unit>
+
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.search_index">
+                <source>chameleon_system_shop.widget.shop_status_widget.search_index</source>
+                <target>Suchindex</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.active_categories">
+                <source>chameleon_system_shop.widget.shop_status_widget.active_categories</source>
+                <target>Aktive Kategorien</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.manufacturer">
+                <source>chameleon_system_shop.widget.shop_status_widget.manufacturer</source>
+                <target>Hersteller</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.product_groups">
+                <source>chameleon_system_shop.widget.shop_status_widget.product_groups</source>
+                <target>Warengruppen</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.variant_sets">
+                <source>chameleon_system_shop.widget.shop_status_widget.variant_sets</source>
+                <target>Variantensets</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.search_indexing_started">
+                <source>chameleon_system_shop.widget.shop_status_widget.search_indexing_started</source>
+                <target>gestartet</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.search_indexing_ended">
+                <source>chameleon_system_shop.widget.shop_status_widget.search_indexing_ended</source>
+                <target>abgeschlossen</target>
+            </trans-unit>
+
             <trans-unit id="chameleon_system_shop.widget.last_orders.title">
                 <source>chameleon_system_shop.widget.last_orders.title</source>
                 <target>Neueste Bestellungen</target>
