--- a/src/ShopBundle/Resources/translations/admin.en.xliff
+++ b/src/ShopBundle/Resources/translations/admin.en.xliff
@@ -334,6 +334,36 @@
                 <source>chameleon_system_shop.widget.shop_product_status_widget.products_quantity</source>
                 <target>Quantity</target>
             </trans-unit>
+
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.search_index">
+                <source>chameleon_system_shop.widget.shop_status_widget.search_index</source>
+                <target>Search Index</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.active_categories">
+                <source>chameleon_system_shop.widget.shop_status_widget.active_categories</source>
+                <target>Active Categories</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.manufacturer">
+                <source>chameleon_system_shop.widget.shop_status_widget.manufacturer</source>
+                <target>Manufacturer</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.product_groups">
+                <source>chameleon_system_shop.widget.shop_status_widget.product_groups</source>
+                <target>Product Groups</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.variant_sets">
+                <source>chameleon_system_shop.widget.shop_status_widget.variant_sets</source>
+                <target>Variant Sets</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.search_indexing_started">
+                <source>chameleon_system_shop.widget.shop_status_widget.search_indexing_started</source>
+                <target>started</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_status_widget.search_indexing_ended">
+                <source>chameleon_system_shop.widget.shop_status_widget.search_indexing_ended</source>
+                <target>ended</target>
+            </trans-unit>
+
             <trans-unit id="chameleon_system_shop.widget.last_orders.title">
                 <source>chameleon_system_shop.widget.last_orders.title</source>
                 <target>Latest Orders</target>
