ref #65182: add translations for widget collections

--- a/src/EcommerceStatsBundle/Resources/translations/admin.de.xliff
+++ b/src/EcommerceStatsBundle/Resources/translations/admin.de.xliff
@@ -138,6 +138,18 @@
                 <source>chameleon_system_ecommerce_stats.access_denied</source>
                 <target>Sie haben keine Benutzerrolle mit den passenden Zugriffberechtigungen</target>
             </trans-unit>
+            <trans-unit id="chameleon_system_cms_dashboard.widget.group_name_sales">
+                <source>chameleon_system_cms_dashboard.widget.group_name_sales</source>
+                <target>Verkäufe</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_cms_dashboard.widget.group_name_customer-stats-and-payment">
+                <source>chameleon_system_cms_dashboard.widget.group_name_customer-stats-and-payment</source>
+                <target>Kunden und Zahlungsmethoden</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_cms_dashboard.widget.group_name_analytics-orders">
+                <source>chameleon_system_cms_dashboard.widget.group_name_analytics-orders</source>
+                <target>Bestellungen</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
