--- a/src/ShopBundle/Resources/translations/admin.en.xliff
+++ b/src/ShopBundle/Resources/translations/admin.en.xliff
@@ -436,6 +436,10 @@
                 <source>chameleon_system_shop.widget.user_type_guest</source>
                 <target>Guest Customer</target>
             </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.used_voucher_series.title">
+                <source>chameleon_system_shop.widget.used_voucher_series.title</source>
+                <target>Used Vouchers</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
