--- a/src/ShopBundle/Resources/translations/admin.de.xliff
+++ b/src/ShopBundle/Resources/translations/admin.de.xliff
@@ -440,6 +440,10 @@
                 <source>chameleon_system_shop.widget.used_voucher_series.title</source>
                 <target>Verwendete Gutscheine</target>
             </trans-unit>
+            <trans-unit id="chameleon_system_shop.widget.shop_product_status_widget.no_data">
+                 <source>chameleon_system_shop.widget.shop_product_status_widget.no_data</source>
+                 <target>Es wurden keine Gutscheine in den letzten %days% Tagen eingelöst</target>
+             </trans-unit>
         </body>
     </file>
 </xliff>
